# ocat

./: .gitignore  .merlin  Makefile  README.md  _tags  ocat.opam
.circleci/: config.yml
examples/: README.md  cofree_example.ml  fix_example.ml  functor_example.ml  jbuild  monad_example.ml  monoid_example.ml
src/: arrow.ml  cofree.ml  comonad.ml  fix.ml  free.ml  functor.ml  jbuild  monad.ml  monoid.ml  ocat.ml  ocat_modules.ml  ocat_transformers.ml
test/: jbuild  test_monad_modules.ml  test_monad_transformers.ml  test_monoid_modules.ml
