opam-version: "1.2"
version: "0.1"
maintainer: "webmaster@burgerdev.de"
authors: ["Markus Rudy"]
homepage: "https://github.com/burgerdev/ocat"
bug-reports: "https://github.com/burgerdev/ocat/issues"
dev-repo: "https://github.com/burgerdev/ocat.git"
license: "GPLv3"
build: [
  ["jbuilder" "build" "--only" "ocat" "--root" "." "-j" jobs "@install"]
]
